# HITC_robot_platform

./: README.md  error.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/trajectory_generator/share/trajectory_generator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/: capstone.csv  error.csv
src/HITC_platform/: CMakeLists.txt  package.xml
src/HITC_platform/launch/: display.launch  gazebo.launch
src/HITC_platform/meshes/: link1.STL  link2.STL
src/HITC_platform/urdf/: HITC_platform.csv  HITC_platform.urdf
src/Sensor_readings/: Angle_Testing.ino
src/angle_slip_detection_without_as5600_library/: angle_slip_detection_without_as5600_library.ino
src/aruco/: aruco.py
src/c_pkg/: CMakeLists.txt  package.xml
src/camera_capture/: setup.py
src/camera_capture/camera_capture/: RRT.py  camerMatrix.txt  cameraDistortion.txt  processed_workspace.npy  workspace_processing.py
src/customized_subscriber_publisher_float_array_PID/: customized_subscriber_publisher_float_array_PID.ino
src/hitc_robot_description/: CMakeLists.txt
src/image_processing/: setup.py
src/laser_pointer/: package.xml  setup.cfg  setup.py
src/log/: latest_build
src/my_robot_description/: package.xml  setup.py
src/path_planner/: milestone2.csv  setup.py  timmingTest.csv
src/robot_arm_description/: CMakeLists.txt  package.xml
src/startup/: setup.py
src/state_publisher_py/: setup.cfg  setup.py
src/testing_motors/: package.xml  setup.cfg  setup.py
src/trajectory_generator/: setup.py
(+135 files in other folders)
